se añadio una section y se modificaron cosas

--- a/index.html
+++ b/index.html
@@ -4,21 +4,49 @@
 <head>
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrega2</title>
+    <title>Las Respuestas</title>
 </head>
 
 <body>
     <header class="header">
-            <img class="img" src="/img/logoLR-sf.png" alt="Logo de LR">
+        <img class="img" src="/img/logoLR-sf.png" alt="Logo de LR">
         <nav>
             <ul class="lista-nav">
-                <li><a href="http://">Home</a></li>
-                <li><a href="http://">Productos</a></li>
-                <li><a href="http://">Sugerencias</a></li>
-                <li><a href="http://">Contactenos</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Preguntas</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Contáctenos</a></li>
             </ul>
         </nav>
     </header>
+    <section class="section">
+
+        <div>
+            <h1>Las Respuestas</h1>
+        </div>
+
+        <div class="container">
+            <div class="container2">
+                <h3>Cuando te sobrepasen las situaciones.
+                    Cuando lo q te digan no te alcance.
+                    Cuando las preguntas sean demasiadas.
+                    Nosotros, te damos "Las Respuestas".</h3>
+            </div>
+            <div class="container3">
+                <img class="imagen" src="./img/logoLR-sf.png" alt="logo LR ">
+            </div>
+        </div>
+        <div class="contain-boton">
+            <a class="boton" href="#">Registrate y recibi mas info</a>
+        </div>
+        <div class="parrafo">
+            <p>
+                Somos un grupo de personas, q pasaron por lo q pasas, q estuvieron donde estas y q decidieron ayudarte con lo q hoy no entendes, pero sabes q esta ahi.
+            </p>
+        </div>
+           
+
+    </section>
 
 </body>
 
