se cambio todo y se añadieron 2 sections

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header class="header">
-        <img class="img" src="/img/logoLR-sf.png" alt="Logo de LR">
+        <img class="img" src="./img/Logo-LR-nuevo.png" alt="Logo de LR">
         <nav>
             <ul class="lista-nav">
                 <li><a href="#">Home</a></li>
@@ -27,24 +27,88 @@
 
         <div class="container">
             <div class="container2">
-                <h3>Cuando te sobrepasen las situaciones.
-                    Cuando lo q te digan no te alcance.
-                    Cuando las preguntas sean demasiadas.
-                    Nosotros, te damos "Las Respuestas".</h3>
+                <p class="parrafo1">Cuando te sobrepasen las situaciones. Cuando lo q te digan no te alcance. Cuando las
+                    preguntas sean
+                    demasiadas. Nosotros, te damos "Las Respuestas".</p>
             </div>
             <div class="container3">
-                <img class="imagen" src="./img/logoLR-sf.png" alt="logo LR ">
+                <img class="imagen" src="./img/trisquel-celta.png" alt="logo LR ">
             </div>
         </div>
         <div class="contain-boton">
             <a class="boton" href="#">Registrate y recibi mas info</a>
         </div>
-        <div class="parrafo">
+        <div class="parrafo2">
             <p>
-                Somos un grupo de personas, q pasaron por lo q pasas, q estuvieron donde estas y q decidieron ayudarte con lo q hoy no entendes, pero sabes q esta ahi.
+                Somos un grupo de personas, q pasaron por lo q pasas, q estuvieron donde estas y q decidieron ayudarte
+                con lo q hoy no entendes, pero sabes q esta ahi.
             </p>
         </div>
-           
+
+
+    </section>
+    <div class="articles">
+        <article class="imagen1">
+            <h4>Inicio a consagración de velas</h4>
+            <p>Animate a depositar todo tu poder en las velas, y dejanos enseñarte como...</p>
+            <div class="leer">
+                <a href="#">Leer más</a>
+            </div>
+
+        </article>
+        <article class="imagen2">
+            <h4>Primeros pasos en el Tarot</h4>
+            <p>Empezá a conocer, todo lo que el Universo tiene para decirte...</p>
+            <div class="leer">
+                <a href="#">Leer más</a>
+            </div>
+
+        </article>
+        <article class="imagen3">
+            <h4>Iniciación en Runas Vikingas</h4>
+            <p>Conocé el método, que usaban las antiguas culturas Nórdicas...</p>
+            <div class="leer">
+                <a href="#">Leer más</a>
+            </div>
+
+        </article>
+    </div>
+    <section class="anotarse">
+        <h2>¿Cómo me anoto a un curso?</h2>
+        <div class="container-anotarse">
+            <div class="paso1">
+                <h4>Paso 1:</h4>
+                <ul>
+                    <li>Elegí el curso q más te guste.</li>
+                </ul>
+
+            </div>
+            <div class="paso2">
+                <h4>Paso 2:</h4>
+                <ul>
+                    <li>Dale click al botón Registrarse.</li>
+                </ul>
+
+            </div>
+            <div class="paso3">
+                <h4>Paso 3:</h4>
+                <ul>
+                    <li>Llená el formulario con tus datos.</li>
+                </ul>
+
+            </div>
+            <div class="paso4">
+                <h4>Paso 4:</h4>
+                <ul>
+                    <li>Validá tu correo, desde el mail q te llega.</li>
+                </ul>
+
+            </div>
+
+        </div>
+        <div class="div-bot">
+            <a class="bot-registro" href="#">Registrarse</a>
+        </div>
 
     </section>
 
