se agrego footer y mejoro responsive

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <img class="img" src="./img/Logo-LR-nuevo.png" alt="Logo de LR">
         <nav>
             <ul class="lista-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Preguntas</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Contáctenos</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#cursos">Cursos</a></li>
+                <li><a href="#preguntas">Preguntas</a></li>
+                <li><a href="#formulario">Contáctenos</a></li>
             </ul>
         </nav>
     </header>
     <section class="section">
 
-        <div>
+        <div id="home">
             <h1>Las Respuestas</h1>
         </div>
 
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="contain-boton">
-            <a class="boton" href="#">Registrate y recibi mas info</a>
+            <a class="boton" href="#formulario">Registrate y recibi mas info</a>
         </div>
         <div class="parrafo2">
             <p>
@@ -47,70 +47,126 @@
 
 
     </section>
-    <div class="articles">
-        <article class="imagen1">
-            <h4>Inicio a consagración de velas</h4>
-            <p>Animate a depositar todo tu poder en las velas, y dejanos enseñarte como...</p>
-            <div class="leer">
-                <a href="#">Leer más</a>
-            </div>
 
-        </article>
-        <article class="imagen2">
-            <h4>Primeros pasos en el Tarot</h4>
-            <p>Empezá a conocer, todo lo que el Universo tiene para decirte...</p>
-            <div class="leer">
-                <a href="#">Leer más</a>
-            </div>
+    <section class="contain-arts" id="cursos">
+        <div class="articles">
+            <article class="imagen1">
+                <h4>Inicio a consagración de velas</h4>
+                <p>Animate a depositar todo tu poder en las velas, y dejanos enseñarte como...</p>
+                <div class="leer">
+                    <a href="#formulario">Entrar</a>
+                </div>
 
-        </article>
-        <article class="imagen3">
-            <h4>Iniciación en Runas Vikingas</h4>
-            <p>Conocé el método, que usaban las antiguas culturas Nórdicas...</p>
-            <div class="leer">
-                <a href="#">Leer más</a>
-            </div>
+            </article>
+            <article class="imagen2">
+                <h4>Primeros pasos en el Tarot</h4>
+                <p>Empezá a conocer, todo lo que el Universo tiene para decirte...</p>
+                <div class="leer">
+                    <a href="#formulario">Entrar</a>
+                </div>
 
-        </article>
-    </div>
-    <section class="anotarse">
-        <h2>¿Cómo me anoto a un curso?</h2>
-        <div class="container-anotarse">
-            <div class="paso1">
-                <h4>Paso 1:</h4>
-                <ul>
-                    <li>Elegí el curso q más te guste.</li>
-                </ul>
+            </article>
+            <article class="imagen3">
+                <h4>Iniciación en Runas Vikingas</h4>
+                <p>Conocé el método, que usaban las antiguas culturas Nórdicas...</p>
+                <div class="leer">
+                    <a href="#formulario">Entrar</a>
+                </div>
 
-            </div>
-            <div class="paso2">
-                <h4>Paso 2:</h4>
-                <ul>
-                    <li>Dale click al botón Registrarse.</li>
-                </ul>
-
-            </div>
-            <div class="paso3">
-                <h4>Paso 3:</h4>
-                <ul>
-                    <li>Llená el formulario con tus datos.</li>
-                </ul>
-
-            </div>
-            <div class="paso4">
-                <h4>Paso 4:</h4>
-                <ul>
-                    <li>Validá tu correo, desde el mail q te llega.</li>
-                </ul>
-
-            </div>
-
-        </div>
-        <div class="div-bot">
-            <a class="bot-registro" href="#">Registrarse</a>
+            </article>
         </div>
 
     </section>
+
+    <section class="anotarse" id="preguntas">
+        <h2>¿Cómo me anoto a un curso?</h2>
+        <div class="container-anotarse">
+            <div class="pasos">
+                <h4>Paso 1:</h4>
+                <p>Elegí el curso q más te guste.</p>
+            </div>
+            <div class="pasos">
+                <h4>Paso 2:</h4>
+                <p>Dale click al botón Registrarse.</p>
+            </div>
+            <div class="pasos">
+                <h4>Paso 3:</h4>
+                <p>Llená el formulario con tus datos.</p>
+            </div>
+            <div class="pasos">
+                <h4>Paso 4:</h4>
+                <p>Validá tu correo.</p>
+            </div>
+
+        </div>
+
+
+    </section>
+
+    <section class="trabajamos">
+        <div class="trabajamos-container">
+            <div>
+                <h2>¿Como trabajamos?</h2>
+            </div>
+            <div class="modos">
+                <div>
+                    <h4>Ondemand</h4>
+                    <p>Recibi por mail, todos los videos y el titulo habilitante para ser aprendiz de brujo</p>
+                </div>
+                <div>
+                    <h4>Online</h4>
+                    <p>Conectate 3 veces por semana e interactua con nuestros profes</p>
+                </div>
+                <div>
+                    <h4>Libro físico</h4>
+                    <p>Usa el método mas antiguo y aprende las destrezas como nuestros antepasados</p>
+                </div>
+                <div>
+                    <h4>Presencial</h4>
+                    <p>Días y horarios flexibles, que se adaptan a los tuyos</p>
+                </div>
+            </div>
+    </section>
+    <footer class="footer">
+        <div class="contain-footer">
+            <h3>Contactanos</h3>
+            <ul>
+                <li>Direccion: Ocus Pocus 2585</li>
+                <li>Telefono: 0800-abracadabra</li>
+                <li>Email: Flipendo@gmail.com</li>
+            </ul>
+        </div>
+        <form class="form-footer" id="formulario">
+            <h3>Registrate</h3>
+            <div>
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" placeholder="Escriba su nombre">
+            </div>
+            <div>
+                <label for="apellido">Apellido:</label>
+                <input type="text" id="apellido" placeholder="Escriba su apellido">
+            </div>
+            <div>
+                <label for="email">Correo:</label>
+                <input type="email" id="email" placeholder="Escriba su correo">
+            </div>
+            <div>
+                <input type="checkbox" id="terminos">
+                <label class="checkbox" for="terminos"> Acepto las bases y condiciones</label>
+            </div>
+            <div>
+                <input type="checkbox" id="info">
+                <label class="checkbox" for="info">Deseo recibir informacion en mi correo</label>
+            </div>
+            <div class="bot-reg">
+                <button>Registrarme</button>
+            </div>
+
+
+
+
+        </form>
+    </footer>
 
 </body>
 
